trying to fix flicker

--- a/wheel.css
+++ b/wheel.css
@@ -223,8 +223,8 @@ flex-wrap: wrap;
 }
 
 .letterBox {
-width: 69px;
-height: 69px;
+width: 72px;
+height: 72px;
 font-size: 22px;
 display: flex;
 margin: 1px;
